--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -13,7 +13,7 @@
   <b>Number of Historic Prices: </b>: <%= @c.data_points.size %><br/><br/>
 
   <b>Historic Prices:</b><br/>
-  <% for data_point in @c.data_points %>
+  <% for data_point in @c.data_points.sort { |dp1, dp2| dp2.date <=> dp1.date } %>
   Date: <%= data_point.date %>, Open: <%= data_point.open %>,
   High: <%= data_point.high %>, Low: <%= data_point.low %>,
   Close: <%= data_point.close %>, Volume: <%= data_point.volume %>,
