--- a/app/views/home/state_test.erb
+++ b/app/views/home/state_test.erb
@@ -1,22 +1,15 @@
 <%= javascript_include_tag :defaults %> 
 
 <script language="javascript">
-  var poll = false;
-  var timeStart;
-  var timeDifference;
-
   function start_xhr() {
     document.getElementById('busy').style.visibility = 'visible';
     document.getElementById('status').style.visibility = 'visible';
-    poll = true;
-    timeStart = new Date();
+    document.getElementById('results').style.visibility = 'hidden';
   }
   function stop_xhr() {
     document.getElementById('busy').style.visibility = 'hidden';
     document.getElementById('status').style.visibility = 'hidden';
-    poll = false;
-    var timeEnd = new Date();
-    timeDifference = timeEnd.value_of() - timeStart.value_of();
+    document.getElementById('results').style.visibility = 'visible';
   }
 </script>
 
@@ -24,11 +17,15 @@
                              :url => { :action => :render_status },
                              :condition => "poll") %>
 
-<%= link_to_remote "Risk Analysis",
-  :loading => "start_xhr()",
-  :complete => "stop_xhr()",
-  :update => 'results',
-  :url => {:action => "risk_analysis"} %>
+<h1>File Upload</h1>
+<% form_tag(:url => {:action => :risk_analysis},
+                   :html => {:multipart => true, :target => 'upload_frame'},
+                   :loading => "start_xhr()", :complete => "stop_xhr()",
+                   :update => 'results') do -%>
+<p><label for="upload_file">Select File</label> :
+<%= file_field 'upload', 'datafile' %></p>
+<%= submit_tag "Perform Analysis" %>
+<% end %>
 
 <div id="busy" style="visibility:hidden">
   <%= image_tag "busy.gif" %>
@@ -37,5 +34,5 @@
 <div id="status" style="visibility:hidden">
 </div>
 
-<div id="results">
+<div id="results" style="visibility:hidden">
 </div>
