--- a/app/views/home/state_test.erb
+++ b/app/views/home/state_test.erb
@@ -1,15 +1,29 @@
+<title>Portfolio Analysis System</title>
+<h1>Portfolio Analysis System</h1>
+
 <%= javascript_include_tag :defaults %> 
 
 <script language="javascript">
-  function start_xhr() {
+  function start_risk_xhr() {
     document.getElementById('busy').style.visibility = 'visible';
     document.getElementById('status').style.visibility = 'visible';
-    document.getElementById('results').style.visibility = 'hidden';
+    document.getElementById('risk_results').style.visibility = 'hidden';
   }
-  function stop_xhr() {
+  function stop_risk_xhr() {
     document.getElementById('busy').style.visibility = 'hidden';
     document.getElementById('status').style.visibility = 'hidden';
-    document.getElementById('results').style.visibility = 'visible';
+    document.getElementById('risk_results').style.visibility = 'visible';
+  }
+
+  function start_mc_xhr() {
+    document.getElementById('busy').style.visibility = 'visible';
+    document.getElementById('status').style.visibility = 'visible';
+    document.getElementById('mc_results').style.visibility = 'hidden';
+  }
+  function stop_mc_xhr() {
+    document.getElementById('busy').style.visibility = 'hidden';
+    document.getElementById('status').style.visibility = 'hidden';
+    document.getElementById('mc_results').style.visibility = 'visible';
   }
 </script>
 
@@ -17,16 +31,25 @@
                              :url => { :action => :render_status },
                              :condition => "poll") %>
 
-<h1>File Upload</h1>
-<% form_tag(:url => {:action => :risk_analysis},
-                   :html => {:multipart => true, :target => 'upload_frame'},
-                   :loading => "start_xhr()", :complete => "stop_xhr()",
-                   :update => 'results') do -%>
-<p><label for="upload_file">Select File</label> :
-<%= file_field 'upload', 'datafile' %></p>
-<%= submit_tag "Perform Analysis" %>
+<h3>Portfolio Upload</h3>
+<% form_for(:portfolio, :url => {:action => :state_test},
+                      :html => { :multipart => true }) do |f| -%>
+  <p>
+    <label for="datafile">Upload Your Portfolio:</label>
+    <%= f.file_field :datafile %>
+  </p>
+  <p>
+    <%= submit_tag 'Upload' %>
+  </p>
+<% end -%>
+<% if !@portfolio.nil? %>
+  <h3>Current Portfolio Holdings</h3>
+  <% for holding in (@portfolio.tickers).zip(@portfolio.shares) %>
+    <%= holding[0] %>: <%= holding[1] %> shares <br/>
+  <% end %>
 <% end %>
 
+<h3>Analysis</h3>
 <div id="busy" style="visibility:hidden">
   <%= image_tag "busy.gif" %>
 </div>
@@ -34,5 +57,18 @@
 <div id="status" style="visibility:hidden">
 </div>
 
-<div id="results" style="visibility:hidden">
+<div id="risk_results" style="visibility:hidden">
 </div>
+<div id="mc_results" style="visibility:hidden">
+</div>
+<%= link_to_remote "Risk Composition",
+                   :url => {:action => :risk_analysis},
+                   :loading => "start_risk_xhr()",
+                   :complete => "stop_risk_xhr()",
+                   :update => 'risk_results' %>
+
+<%= link_to_remote "Monte-Carlo Simulation",
+                   :url => {:action => :monte_carlo},
+                   :loading => "start_mc_xhr()",
+                   :complete => "stop_mc_xhr()",
+                   :update => 'mc_results' %>
